Adjust models, implement listing add and get, other minor adjustments
