# mobile_api/swagger.yaml
@@ -152,18 +152,116 @@ paths:
       tags:
       - register_shelter
     parameters: []
-  /user/me:
-    get:
-      operationId: user_me_list
+  /token-refresh:
+    post:
+      operationId: token-refresh_create
       description: ''
-      parameters: []
+      parameters:
+      - name: data
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/UserTokenRefresh'
+      responses:
+        '200':
+          description: Success
+          schema:
+            type: object
+            properties:
+              refresh:
+                type: string
+              access:
+                type: string
+      tags:
+      - token-refresh
+    parameters: []
+  /user/listings:
+    get:
+      operationId: user_listings_list
+      description: ''
+      parameters:
+      - name: page
+        in: query
+        description: A page number within the paginated result set.
+        required: false
+        type: integer
       responses:
         '200':
           description: ''
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/UserGetMe'
+            required:
+            - count
+            - results
+            type: object
+            properties:
+              count:
+                type: integer
+              next:
+                type: string
+                format: uri
+                x-nullable: true
+              previous:
+                type: string
+                format: uri
+                x-nullable: true
+              results:
+                type: array
+                items:
+                  $ref: '#/definitions/ListingList'
+      tags:
+      - user
+    parameters: []
+  /user/listings/add:
+    post:
+      operationId: user_listings_add_create
+      description: ''
+      parameters:
+      - name: data
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/AddListing'
+      responses:
+        '201':
+          description: ''
+          schema:
+            $ref: '#/definitions/AddListing'
+      tags:
+      - user
+    parameters: []
+  /user/me:
+    get:
+      operationId: user_me_list
+      description: ''
+      parameters:
+      - name: page
+        in: query
+        description: A page number within the paginated result set.
+        required: false
+        type: integer
+      responses:
+        '200':
+          description: ''
+          schema:
+            required:
+            - count
+            - results
+            type: object
+            properties:
+              count:
+                type: integer
+              next:
+                type: string
+                format: uri
+                x-nullable: true
+              previous:
+                type: string
+                format: uri
+                x-nullable: true
+              results:
+                type: array
+                items:
+                  $ref: '#/definitions/UserGetMe'
       tags:
       - user
       security:
@@ -280,6 +378,163 @@ definitions:
         title: Password
         type: string
         minLength: 1
+  UserTokenRefresh:
+    required:
+    - refresh_token
+    type: object
+    properties:
+      refresh_token:
+        title: Refresh token
+        type: string
+        minLength: 1
+  ListingList:
+    required:
+    - type
+    - listing_type
+    - status
+    type: object
+    properties:
+      id:
+        title: ID
+        type: integer
+        readOnly: true
+      name:
+        title: Name
+        type: string
+        maxLength: 100
+        x-nullable: true
+      type:
+        title: Type
+        type: string
+        enum:
+        - dog
+        - cat
+        - parrot
+        - turtle
+        - rabbit
+        - fish
+        - hamster
+        - other
+      breed:
+        title: Breed
+        type: string
+        maxLength: 100
+        x-nullable: true
+      gender:
+        title: Gender
+        type: string
+        enum:
+        - male
+        - female
+        x-nullable: true
+      birth_date:
+        title: Birth date
+        type: string
+        format: date
+        x-nullable: true
+      weight:
+        title: Weight
+        description: Weight in kg
+        type: number
+        x-nullable: true
+      description:
+        title: Description
+        type: string
+        x-nullable: true
+      listing_type:
+        title: Listing type
+        type: string
+        enum:
+        - adoption
+        - lost
+      status:
+        title: Status
+        type: string
+        maxLength: 20
+        minLength: 1
+      last_seen_location:
+        title: Last seen location
+        type: string
+        maxLength: 255
+        x-nullable: true
+      last_seen_date:
+        title: Last seen date
+        type: string
+        format: date
+        x-nullable: true
+      listing_date:
+        title: Listing date
+        type: string
+        format: date-time
+        readOnly: true
+      age:
+        title: Age
+        type: string
+        readOnly: true
+  AddListing:
+    required:
+    - type
+    - listing_type
+    type: object
+    properties:
+      name:
+        title: Name
+        type: string
+        maxLength: 100
+        x-nullable: true
+      type:
+        title: Type
+        type: string
+        enum:
+        - dog
+        - cat
+        - parrot
+        - turtle
+        - rabbit
+        - fish
+        - hamster
+        - other
+      breed:
+        title: Breed
+        type: string
+        maxLength: 100
+        x-nullable: true
+      birth_date:
+        title: Birth date
+        type: string
+        format: date
+        x-nullable: true
+      weight:
+        title: Weight
+        type: number
+        x-nullable: true
+      gender:
+        title: Gender
+        type: string
+        enum:
+        - male
+        - female
+        x-nullable: true
+      description:
+        title: Description
+        type: string
+        x-nullable: true
+      listing_type:
+        title: Listing type
+        type: string
+        enum:
+        - adoption
+        - lost
+      last_seen_location:
+        title: Last seen location
+        type: string
+        maxLength: 255
+        x-nullable: true
+      last_seen_date:
+        title: Last seen date
+        type: string
+        format: date
+        x-nullable: true
   UserGetMe:
     required:
     - phone
